--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/Stygma7/leds-piano-raspi/issues"
   },
-  "homepage": "https://github.com/Stygma7/leds-piano-raspi#readme"
+  "homepage": "https://github.com/Stygma7/leds-piano-raspi#readme",
+  "devDependencies": {
+    "prettier": "^2.6.0"
+  }
 }
